--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html:focus-within {
@@ -22,6 +24,9 @@ body {
   font-family: "Lexend Deca", sans-serif;
   color: rgba(255, 255, 255, 0.75);
   font-weight: 400;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
 }
 
 .card {
@@ -32,10 +37,33 @@ body {
   border-radius: 0.66667rem;
 }
 
+@media screen and (min-width: 1200px) {
+  .card {
+    max-width: 66.66667rem;
+    min-height: 0rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+}
+
 .card__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 33.33333rem;
+          flex: 1 33.33333rem;
   max-width: 100%;
   min-height: 16rem;
   position: relative;
+}
+
+@media screen and (min-width: 1200px) {
+  .card__image {
+    min-height: 100%;
+  }
 }
 
 .image {
@@ -47,18 +75,49 @@ body {
   border-radius: 0.66667rem 0.66667rem 0rem 0rem;
 }
 
+@media screen and (min-width: 1200px) {
+  .image {
+    min-height: 100%;
+    background-image: url(images/image-header-desktop.jpg);
+    background-size: cover;
+    border-radius: 0rem 0.66667rem 0.66667rem 0rem;
+  }
+}
+
 .overlay {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(86, 35, 118, 0.726);
+  background-color: rgba(96, 19, 144, 0.637);
   border-radius: 0.66667rem 0.66667rem 0rem 0rem;
   z-index: 1000;
 }
 
+@media screen and (min-width: 1200px) {
+  .overlay {
+    border-radius: 0rem 0.66667rem 0.66667rem 0rem;
+  }
+}
+
+.overlay:hover {
+  -webkit-transition: 1s;
+  transition: 1s;
+  background-color: transparent;
+}
+
 .card__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 33.33333rem;
+          flex: 1 33.33333rem;
   padding: 3.33333rem 1.33333rem 2.66667rem 1.33333rem;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .card__content {
+    text-align: left;
+    padding: 3.33333rem 6.66667rem 3.33333rem 3.33333rem;
+  }
 }
 
 .card__content-info {
@@ -74,15 +133,25 @@ body {
   font-weight: 700;
 }
 
+@media screen and (min-width: 1200px) {
+  .card__content-info h2 {
+    font-size: 2rem;
+    line-height: 2.8rem;
+    margin-bottom: 1.66667rem;
+  }
+}
+
 .card__content-stat {
   min-height: 6.66667rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -91,8 +160,29 @@ body {
           justify-content: space-between;
 }
 
+@media screen and (min-width: 1200px) {
+  .card__content-stat {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    min-height: 0rem;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-top: 3.33333rem;
+  }
+}
+
 .card__content-stat > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 9.33333rem;
+          flex: 1 9.33333rem;
   padding: 0.66667rem 0rem;
+}
+
+@media screen and (min-width: 1200px) {
+  .card__content-stat > * {
+    padding: 0.66667rem 3rem 0rem 0rem;
+  }
 }
 
 .highlight {
@@ -106,6 +196,13 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 700;
   color: white;
+}
+
+@media screen and (min-width: 1200px) {
+  .stat span {
+    font-size: 1.33333rem;
+    line-height: 2rem;
+  }
 }
 
 .stat p {
