Overlay ==== Extended Transition Time

--- a/style.css
+++ b/style.css
@@ -105,6 +105,8 @@ body {
   background-color: rgba(96, 19, 144, 0.637);
   border-radius: 0.66667rem 0.66667rem 0rem 0rem;
   z-index: 1000;
+  -webkit-transition: 2s;
+  transition: 2s;
 }
 
 @media screen and (min-width: 1200px) {
